--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,3 +19,13 @@ body {
     sans-serif;
   scroll-behavior: smooth;
 }
+
+.no-visible-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  -webkit-overflow-scrolling: touch;
+}
+ 
+.no-visible-scrollbar::-webkit-scrollbar {
+  display: none;
+}
