--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,6 +18,7 @@ body {
     "Helvetica Neue",
     sans-serif;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .no-visible-scrollbar {
@@ -25,7 +26,7 @@ body {
   -ms-overflow-style: none;
   -webkit-overflow-scrolling: touch;
 }
- 
+
 .no-visible-scrollbar::-webkit-scrollbar {
   display: none;
 }
