--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,10 @@
 
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css');
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   font-family:
     "Poppins" -apple-system,
